--- a/teddy-buzzle/index.html
+++ b/teddy-buzzle/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/art15.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teddy Buzzle Game</title>
+    <title>Steady Buzzle Game</title>
   </head>
   <body>
     <div id="root"></div> 
